# ben-rs

./: .env.example  Cargo.toml  README.md  database.sqlite  database.sqlite-shm  database.sqlite-wal
migrations/: 20231020193356_initialize.sql
src/: common.rs  event_handler.rs  main.rs
src/commands/: mod.rs
src/commands/tracking/: mod.rs  statistics.rs
src/commands/utilities/: common.rs
src/dal/: models.rs
src/dal/events/: general_info.rs  mod.rs  voice_state_update.rs
src/handlers/: error.rs  mod.rs  post_command.rs  pre_command.rs  setup.rs
