[package]
name = "ben-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
env_logger = "0.10.0"
poise = "0.5.6"
songbird = { git = "https://github.com/serenity-rs/songbird.git", branch = "next" }
sqlx =  { version = "0.7.2", features = ["runtime-tokio-rustls", "time", "sqlite"] }
tokio = { version = "1.33.0", features = ["rt-multi-thread"] }
